objects/CreditMemoConf__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Where you can control which credit memo components get auto populated and in what order.</description>
    <fields>
        <fullName>commentary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this just commentary?</inlineHelpText>
        <label>commentary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>displayType__c</fullName>
        <inlineHelpText>The internal reference name of the credit memo element</inlineHelpText>
        <label>displayType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortOrder__c</fullName>
        <inlineHelpText>What position the credit memo element shows up in</inlineHelpText>
        <label>sortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Memo Config</label>
</CustomObject>